facebook section updated v1.4

--- a/contactus.html
+++ b/contactus.html
@@ -289,8 +289,7 @@
 
                  <h5>Follow us on Facebook - </h5><br>
 
-             <div class="fb-page" data-href="https://www.facebook.com/SlaEire/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SlaEire/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SlaEire/">Sri Lanka Association of Ireland - SlaÉire</a></blockquote></div>
-
+            <div class="fb-page" data-href="https://www.facebook.com/SlaEire/" data-tabs="" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SlaEire/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SlaEire/">Sri Lanka Association of Ireland - SlaÉire</a></blockquote></div>
 
            </div>
 
