nearly complete version

--- a/discoversl.html
+++ b/discoversl.html
@@ -17,13 +17,6 @@
   </head>
   <body ng-app="thankam">
 
-
-
-
-
-
-
-
       <div style="z-index:99999" class="container-fluid">
                       <div id="sm-menu" class="menu-sd">
                         <div class="row menu-top-smd">
@@ -175,22 +168,11 @@
                     </div>
 
                 </header>
-
-
-
-
-
-
-
       </div>
 
 
 
   <!---************************** Header content Ends Here ***************-->
-
-
-
-
 <div  class="home-cont">
 
 
@@ -209,62 +191,6 @@
 </div>
 
           </div>
-
-
-
-          <div class="container add-tionn">
-
-
-          <div class="row">
-                <div class="col-sm-6">
-
-                    <img style="width: 100%;" src="assets/images/sl-embassy.jpg">
-
-                </div>
-
-              <div class="col-sm-6 abut">
-
-                   <div class="row hed">
-
-              <h2>Sri lankan diplomatic mission in Ireland</h2>
-            </div>
-
-                  <p >
-                      Sri Lanka do not have an Embassy in Ireland, please contact Embassy of Sri Lanka U.K. You can find answers to most of your questions by visiting the website below.
-                  </p>
-
-                  <h4>High Commission of Sri Lanka</h4>
-
-                  <ul>
-                    No.13,<br>
-                    Hyde Park Gardens,<br>
-                    London<br>
-                    W2 2LU<br>
-                    United Kingdom<br>
-                    Tel: (0044) 207 262 1841<br>
-                    Fax: (0044) 207 262 7970<br>
-                    Email: <a href="mailto:mail@slhc-london.co.uk">mail@slhc-london.co.uk</a><br><br>
-
-                    <li>Apply online visa for Sri Lanka : <a href="http://www.eta.gov.lk/slvisa/" target="_blank">Click here</a><br></li>
-                    <li>High Commission of Sri Lanka in the United Kingdom : <a href="https://srilankahc.uk/" target="_blank">Click here</a></li>
-                  </ul>
-
-                  <br>
-
-                  <h4>Honorary Consulate</h4>
-
-                  <ul>
-                    Mrs. Darina Allen,<br>
-                    Ballymaloe Cookery School Shanagarry,<br>
-                    East Cork<br>
-                    P25 R274<br>
-                    Ireland<br>
-                    Tel: (00353) 21 4646785 <br>
-                    Email: <a href="mailto:darina@cookingisfun.ie">darina@cookingisfun.ie</a><br><br>
-                  </ul>
-                </div>
-          </div>
-         </div>
 
           <div class="container">
             <div class="row hed">
@@ -306,6 +232,62 @@
                     </div>
               </div>
           </div>
+
+          <div class="container add-tionn">
+
+
+          <div class="row">
+                <div class="col-sm-6">
+
+                    <img style="width: 100%;" src="assets/images/sl-embassy.jpg">
+
+                </div>
+
+              <div class="col-sm-6 abut">
+
+                   <div class="row hed">
+
+              <h2>Sri lankan diplomatic mission in Ireland/UK</h2>
+            </div>
+
+                  <p >
+                      Sri Lanka do not have an Embassy in Ireland, please contact Embassy of Sri Lanka U.K. You can find answers to most of your questions by visiting the website below.
+                  </p>
+
+                  <h4>High Commission of Sri Lanka</h4>
+
+                  <ul>
+                    No.13,<br>
+                    Hyde Park Gardens,<br>
+                    London<br>
+                    W2 2LU<br>
+                    United Kingdom<br>
+                    Tel: (0044) 207 262 1841<br>
+                    Fax: (0044) 207 262 7970<br>
+                    Email: <a href="mailto:mail@slhc-london.co.uk">mail@slhc-london.co.uk</a><br><br>
+
+                    <li>Apply online visa for Sri Lanka : <a href="http://www.eta.gov.lk/slvisa/" target="_blank">Click here</a><br></li>
+                    <li>High Commission of Sri Lanka in the United Kingdom : <a href="https://srilankahc.uk/" target="_blank">Click here</a></li>
+                  </ul>
+
+                  <br>
+
+                  <h4>Honorary Consulate</h4>
+
+                  <ul>
+                    Mrs. Darina Allen,<br>
+                    Ballymaloe Cookery School Shanagarry,<br>
+                    East Cork<br>
+                    P25 R274<br>
+                    Ireland<br>
+                    Tel: (00353) 21 4646785 <br>
+                    Email: <a href="mailto:darina@cookingisfun.ie">darina@cookingisfun.ie</a><br><br>
+                  </ul>
+                </div>
+          </div>
+         </div>
+
+
         </div>
  </div>
 
@@ -357,13 +339,6 @@
                  <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
                  <i class="fa fa-google-plus fico-s hidden-xs"></i>
                  <i class="fa fa-facebook fico-s hidden-xs"></i>
-
-
-
-
-
-
-
                 </p>
 
 
@@ -373,41 +348,7 @@
 
     </footer>
 
-
-
-
-
-
-
-
       </div>
-
-
-
-
-      <div style="z-index: 999999; margin-top: 10%;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div style="width:450px;" class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Donate Now</h4>
-      </div>
-      <div style="padding: 20px;" class="modal-body">
-
-        <b>Indian Bank, Thiruvattar.</b><br>
-        <b>IFSC Code:IDIB000T155.</b><br>
-        <b>MICR Code:629019013.</b><br>
-        <b>Name:Kingsly T.</b><br>
-        <b>a/c No:6093117224.</b><br>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-
-
 
   </body>
 
