--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
   </head>
   <body ng-app="thankam">
 
-
-
-
-
-
-
-
       <div style="z-index:99999" class="container-fluid">
                       <div id="sm-menu" class="menu-sd">
                         <div class="row menu-top-smd">
@@ -175,29 +168,11 @@
                     </div>
 
                 </header>
-
-
-
-
-
-
-
       </div>
-
-
-
 
   <!---************************** Header content Ends Here ***************-->
 
-
-
-
-
 <div ng-controller="homeCtrl" class="home-cont">
-
-
-
-
 
 <div   class="container-fluid sldddd">
       <div class=" row hidden-xs">
@@ -329,40 +304,61 @@
 
               <div class="row">
                     <div class="col-sm-6">
-                        <div class="col-sm-6 imsec shado-1">
-                            <img src="assets/images/nl1.jpg">
-                        </div>
                         <div class="col-sm-6 nws">
                             <div class="topp">
-                                <strong class="mnt"><i class="fa fa-calendar"></i>February 20, 2014</strong>
-                                 <a class="comment" href="#"><i class="fa fa-eye"></i> view more  </a>
+                                <strong class="mnt"><i class="fa fa-calendar"></i><script> document.write(new Date().toLocaleDateString()); </script></strong>
+                                 <a class="comment" href="https://www.breakingnews.ie/" target="_blank"><i class="fa fa-eye"></i> view more  </a>
                             </div>
 
-                            <h2>Remember A Charity Week 2014 hailed.</h2>
-                                    <p>
-                                        We’re delighted to announce that Remember A Charity Week has been a fantastic success thanks to the support of our members, the sector, government and businesses.
-                                    </p>
+
+                          <script type="text/javascript">
+                          <!--
+                          rssfeed_url = new Array();
+                          rssfeed_url[0]="https://feeds.breakingnews.ie/bntopstories?format=xml"; rssfeed_url[1]="https://www.irishtimes.com/rss/the-irish-times-news-1.1319192";
+                          rssfeed_frame_width="1100";
+                          rssfeed_frame_height="260";
+                          rssfeed_scroll="on";
+                          rssfeed_scroll_step="6";
+                          rssfeed_scroll_bar="off";
+                          rssfeed_target="_blank";
+                          rssfeed_font_size="12";
+                          rssfeed_font_face="";
+                          rssfeed_border="on";
+                          rssfeed_css_url="https://feed.surfing-waves.com/css/style6.css";
+                          rssfeed_title="on";
+                          rssfeed_title_name="";
+                          rssfeed_title_bgcolor="#3366ff";
+                          rssfeed_title_color="#fff";
+                          rssfeed_title_bgimage="";
+                          rssfeed_footer="off";
+                          rssfeed_footer_name="rss feed";
+                          rssfeed_footer_bgcolor="#fff";
+                          rssfeed_footer_color="#333";
+                          rssfeed_footer_bgimage="";
+                          rssfeed_item_title_length="50";
+                          rssfeed_item_title_color="#666";
+                          rssfeed_item_bgcolor="#fff";
+                          rssfeed_item_bgimage="";
+                          rssfeed_item_border_bottom="on";
+                          rssfeed_item_source_icon="off";
+                          rssfeed_item_date="off";
+                          rssfeed_item_description="on";
+                          rssfeed_item_description_length="120";
+                          rssfeed_item_description_color="#666";
+                          rssfeed_item_description_link_color="#333";
+                          rssfeed_item_description_tag="off";
+                          rssfeed_no_items="0";
+                          rssfeed_cache = "4f130ad32bb78d4af5d90b73d0e54821";
+                          //-->
+                          </script>
+                          <script type="text/javascript" src="https://feed.surfing-waves.com/js/rss-feed.js"></script>
+
+
 
                         </div>
                     </div>
 
-                    <div class="col-sm-6">
-                        <div class="col-sm-6 imsec shado-1">
-                            <img src="assets/images/latest-news-img-1.jpg">
-                        </div>
-                        <div class="col-sm-6 nws">
-                            <div class="topp">
-                                <strong class="mnt"><i class="fa fa-calendar"></i>February 20, 2014</strong>
-                                <a class="comment" href="#"><i class="fa fa-eye"></i> view more  </a>
-                            </div>
 
-                            <h2>Christian Development Scheams</h2>
-                                    <p>
-                                        A charity working for children with speech and language difficulties offers details of its therapy and education services in early years units, special schools
-                                    </p>
-
-                        </div>
-                    </div>
 
 
               </div>
@@ -376,7 +372,6 @@
 
 
           </div>
-
 
 
 
@@ -394,12 +389,12 @@
 
 
                         <div class="upcoming-box">
-<div class="frame"><a href="#"><img alt="img" src="assets/images/events-img-1.jpg"></a></div>
+<div class="frame"><a href="#"><img alt="img" src="assets/images/xmas.jpg"></a></div>
 <div class="caption">
 <div class="timer-box">
 <div class="defaultCountdown is-countdown"><span class="countdown-row countdown-show4"><span class="countdown-section"><span class="countdown-amount">234</span><span class="countdown-period">Day</span></span><span class="countdown-section"><span class="countdown-amount">4</span><span class="countdown-period">Hrs</span></span><span class="countdown-section"><span class="countdown-amount">5</span><span class="countdown-period">Mins</span></span><span class="countdown-section"><span class="countdown-amount">12</span><span class="countdown-period">Sec</span></span></span></div>
 </div>
-<strong class="title">Drugs boycott day</strong><strong class="mnt"><span>18 Augest, 2015</span></strong></div>
+<strong class="title">Our Christmas Party</strong><strong class="mnt"><span>25 December, 2020</span></strong></div>
 </div>
 
 
@@ -411,12 +406,12 @@
 
 
                          <div class="upcoming-box">
-<div class="frame"><a href="#"><img alt="img" src="assets/images/events-img-2.jpg"></a></div>
+<div class="frame"><a href="#"><img alt="img" src="assets/images/independence.jpg"></a></div>
 <div class="caption">
 <div class="timer-box">
 <div class="defaultCountdown is-countdown"><span class="countdown-row countdown-show4"><span class="countdown-section"><span class="countdown-amount">234</span><span class="countdown-period">Day</span></span><span class="countdown-section"><span class="countdown-amount">4</span><span class="countdown-period">Hrs</span></span><span class="countdown-section"><span class="countdown-amount">5</span><span class="countdown-period">Mins</span></span><span class="countdown-section"><span class="countdown-amount">12</span><span class="countdown-period">Sec</span></span></span></div>
 </div>
-<strong class="title">Women Rights Voilence</strong><strong class="mnt"><span>22 Augest, 2015</span></strong></div>
+<strong class="title">Independence Day</strong><strong class="mnt"><span>04 February, 2021</span></strong></div>
 </div>
 
 
@@ -428,12 +423,12 @@
 
 
                          <div class="upcoming-box">
-<div class="frame"><a href="#"><img alt="img" src="assets/images/events-img-3.jpg"></a></div>
+<div class="frame"><a href="#"><img alt="img" src="assets/images/St_Patricks.jpg"></a></div>
 <div class="caption">
 <div class="timer-box">
 <div class="defaultCountdown is-countdown"><span class="countdown-row countdown-show4"><span class="countdown-section"><span class="countdown-amount">234</span><span class="countdown-period">Day</span></span><span class="countdown-section"><span class="countdown-amount">4</span><span class="countdown-period">Hrs</span></span><span class="countdown-section"><span class="countdown-amount">5</span><span class="countdown-period">Mins</span></span><span class="countdown-section"><span class="countdown-amount">12</span><span class="countdown-period">Sec</span></span></span></div>
 </div>
-<strong class="title">Industries Inaguration</strong><strong class="mnt"><span>29 Augest, 2015</span></strong></div>
+<strong class="title">St Patrick's day</strong><strong class="mnt"><span>17 March, 2021</span></strong></div>
 </div>
 
 
@@ -473,77 +468,7 @@
 
 
 
-          <div class="container blog">
 
-
-              <div class="row">
-                   <div class="row hed">
-
-              <h2> Blog Posts</h2>
-              </div>
-
-                  <div class="col-sm-6 blll">
-
-                      <div class="card row">
-                        <div class="col-sm-4">
-                            <img src="assets/images/bb1.jpg">
-                      </div>
-
-                        <div class="col-sm-8 ">
-                          <div class="topp blog-topp">
-                                <strong class="mnt"><i class="fa fa-calendar"></i>February 20, 2014</strong>
-                                <a href="#" class="comment"><i class="fa fa-comments-o"></i>136 Comments</a>
-                            </div>
-
-                          <h4>Why we  look after animals in our Will</h4>
-
-                            <p>
-                           Having come from a leading animal charity as a legacy fundraiser to join the Cystic Fibrosis Trust, I am often asked why animal charities generally receive such a high proportion of their income from legacies. There are             few answers here. Firstly, in my view, animal charities more often than not help people as well
-
-
-                            </p>
-
-                          </div>
-
-                     </div>
-
-
-                  </div>
-                  <div class="col-sm-6 blll">
-
-
-                      <div class="card row">
-                        <div class="col-sm-4">
-                            <img src="assets/images/bb2.jpg">
-                      </div>
-
-                        <div class="col-sm-8 ">
-                          <div class="topp blog-topp">
-                                <strong class="mnt"><i class="fa fa-calendar"></i>February 20, 2014</strong>
-                                <a href="#" class="comment"><i class="fa fa-comments-o"></i>136 Comments</a>
-                            </div>
-
-                          <h4>An emotional connection</h4>
-
-                            <p>
-                            Leaving a legacy in your will is a very emotive act and after producing several legacy fundraising videos, we understand that successful legacy engagement is about connecting emotionally on a personal level.
-
-
-                            </p>
-
-                          </div>
-
-                     </div>
-
-
-
-                  </div>
-
-
-
-              </div>
-
-          </div>
 
 
 
@@ -558,13 +483,13 @@
 
               <div class="col-sm-6">
 
-                  <iframe  height="315" src="https://www.youtube.com/embed/GoGtaXt5f1w" frameborder="0" allowfullscreen></iframe>
+                  <iframe  height="315" src="https://www.youtube.com/embed/fjjWsAUJdII" frameborder="0" allowfullscreen></iframe>
 
               </div>
 
 
               <div class="col-sm-6">
-                  <iframe  height="315" src="https://www.youtube.com/embed/G65z8p1YNhw" frameborder="0" allowfullscreen></iframe>
+                  <iframe  height="315" src="https://www.youtube.com/embed/7mIvdJO69SI" frameborder="0" allowfullscreen></iframe>
 
               </div>
 
@@ -650,33 +575,6 @@
 
 
      </div>
-
-
-
-
-     <div style="z-index: 999999; margin-top: 10%;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
- <div style="width:450px;" class="modal-dialog" role="document">
-   <div class="modal-content">
-     <div class="modal-header">
-       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-       <h4 class="modal-title" id="myModalLabel">Donate Now</h4>
-     </div>
-     <div style="padding: 20px;" class="modal-body">
-
-       <b>Indian Bank, Thiruvattar.</b><br>
-       <b>IFSC Code:IDIB000T155.</b><br>
-       <b>MICR Code:629019013.</b><br>
-       <b>Name:Kingsly T.</b><br>
-       <b>a/c No:6093117224.</b><br>
-     </div>
-
-   </div>
- </div>
- </div>
-
-
-
-
 
  </body>
 
