--- a/movingtoirl.html
+++ b/movingtoirl.html
@@ -16,14 +16,6 @@
     <link href="assets/css/style.css" rel="stylesheet"/>
   </head>
   <body ng-app="thankam">
-
-
-
-
-
-
-
-
       <div style="z-index:99999" class="container-fluid">
                       <div id="sm-menu" class="menu-sd">
                         <div class="row menu-top-smd">
@@ -176,12 +168,6 @@
 
                 </header>
 
-
-
-
-
-
-
       </div>
 
 
@@ -199,21 +185,9 @@
 
 <div  class="container-fluid sldddd">
 
-
-
-
-
-
-
-
           <div class="container tmon">
             <div class="row hed">
             </div>
-
-
-
-
-
 
               <div class="col-sm-9">
                 <div class="row">
@@ -223,9 +197,31 @@
 
                   </div>
                   <div class="col-sm-9">
-                       <b>Youth Unlimited</b>
-                      <p>I'd like to say a big word of thanks to your beautiful and amazing people! I'm so encouraged by people like yourselves who allow us to continue to do what we do. You enjoyed doing it and I did too!</p>
-
+                       <b>Immigration</b>
+                      <p>People from all over the world immigrate to Ireland. Whether you’re a student hoping
+                        to get your next degree, a professional looking to take your career to the next level,
+                        or are even thinking about making Ireland home for you and your family you will find the
+                        information in this page useful to you.</p>
+                      <p>Based on your nationality you can find what you need to enter Ireland by using the link
+                        mentioned below. Simply select your nationality from the dropdown menu, select how long you’re
+                        planning on staying and type of visa required. You’ll then be given a list of what you need to
+                        do before you travel, when you travel, and after you’ve arrived in Ireland. If you’re intending
+                        to stay for less than 90 days, you should apply for a short-stay ‘C’ visa. For those who plan to
+                        work and live in Ireland for more than 90 days, you’ll need to apply for the long-stay ‘D’ visa.</p>
+                        <p>Visas are issued by the Department of Justice and Equality. You can make your online application
+                          from your home country and submit your hard copy application and supporting documentation to the
+                          relevant Irish Embassy/Consulate/Visa Office. If you’re coming from the
+                          European Economic Area (EEA -countries of the EU and Norway, Iceland & Liechtenstein) or
+                          Switzerland you don’t need a visa for Ireland or a work permit. If your spouse/civil partner are
+                          an EU/EEA citizen, then you might be able to skip the visa/work permit process.
+                        </p>
+                        <p>You can find more information about immigration,
+                        </p>
+                        <li>Check if you need an Irish visa : <a href="http://www.inis.gov.ie/en/INIS/Pages/check-irish-visa" target="_blank">Click here</a><br></li>
+                        <li>Citizen Information : <a href="https://www.citizensinformation.ie/en/moving_country/moving_to_ireland/" target="_blank">Click here</a></li>
+                        <li>Naturalisation : <a href="https://www.dfa.ie/citizenship/naturalisation/" target="_blank">Click here</a></li>
+                        <li>Non-EEA nationals  : <a href="https://www.citizensinformation.ie/en/moving_country/moving_to_ireland/rights_of_residence_in_ireland/types_residence_permission_non_eea_nationals.html" target="_blank">Click here</a></li>
+                        <li>Online visa application : <a href="https://www.visas.inis.gov.ie/AVATS/OnlineHome.aspx" target="_blank">Click here</a></li>
                   </div>
 
 
@@ -235,16 +231,37 @@
 
                 <div style="margin-top: 20px;" class="row">
 
-                  <div class="col-sm-3">
-                      <img src="assets/images/karnataka_rural.jpg">
 
-                  </div>
                   <div class="col-sm-9">
-                       <b>Raising the Village</b>
-                      <p>Thank you so much for a remarkable evening. As always, we greatly appreciate the opportunity to present and receive funding from The Funding Network. I am especially grateful for the coaching and support from TFN. It clearly made a huge difference :) I look forward to attending future events as a participant and joining this truly great movement. Thank you again.</p>
+                       <b>Education</b>
+                      <p>Although children are not obliged to attend school until the age of six, almost all children begin
+                        school in the September following their fourth birthday. Nearly 40% of four-year-olds and almost all
+                        five-year-olds are enrolled in infant classes in primary schools (sometimes called national schools).
+                        Three levels of Ireland’s education system are primary, secondary and higher education.
+                      </P>
+                      <p>
+                        Primary education consists of an eight year cycle: junior infants, senior infants, and first to sixth classes.
+                        Pupils normally transfer to post-primary education at the age of twelve.The secondary school system
+                        in Ireland consists of 6 years of study, which is divided into two cycles, Junior and Senior.
+                        Schools in Ireland follow a curriculum set down by the Irish Department of Education and Science (www.education.ie)
+                        so whether in private or state school, all students follow the same courses and take the same state examinations.
+                      </p>
+                      <p>A wide range of institutions in Ireland provide <b>third-level education</b>. The university sector,
+                        the technological sector and the colleges of education are substantially funded by the State.
+                        In addition, there are a number of independent private colleges. The Higher Education Authority
+                        is the statutory agency responsible for the funding of universities, institutes of technology and
+                        certain other higher education institutions. It has an advisory role in relation to the whole sector
+                        of third-level education.
+                      </p>
+                      <p>You can find more information about education,
+                      </p>
+                      <li>Irish Education System : <a href="https://www.education.ie/en/The-Education-System/" target="_blank">Click here</a><br></li>
+                      <li>Where can you do studies in Ireland : <a href="https://www.educationinireland.com/en/where-can-i-study-/" target="_blank">Click here</a></li>
+                  </div>
+                  <div class="col-sm-3">
+                      <img src="assets/images/trinity.jpg">
 
                   </div>
-
 
                 </div>
 
@@ -252,71 +269,106 @@
                 <div style="margin-top: 20px;" class="row">
 
                   <div class="col-sm-3">
-                      <img src="assets/images/1-111.jpg">
+                      <img src="assets/images/employee.jpg">
 
                   </div>
                   <div class="col-sm-9">
-                       <b>Street Kids International</b>
-                      <p>I'd like to say a big word of thanks to your beautiful and amazing people! I'm so encouraged by people like yourselves who allow us to continue to do what we do. You enjoyed doing it and I did too!</p>
+                       <b>Employment</b>
+                      <p>Whether you are currently in work, unemployed or in education, the process of finding and applying for
+                        a job is the same. It is important to research all possible sources of information on employment
+                        opportunities, to send in a well-prepared job application with a relevant cover letter and
+                        CV (curriculum vitae) and, if your application is not successful, to continue the search
+                        for employment.
+                        </p>
+                        <p>Employment permits are issued by the Department of Business, Enterprise and Innovation. Once an
+                          employee holds an employment permit and is working, they have the same Irish Employment Rights
+                          as Irish citizens. There are numerous types of employment permits available, but for those looking
+                          to enter the tech industry, there are two main routes; the Critical Skills Employment Permit and
+                          the General Employment Permit.
+                       </p>
+                       <p>You can find more information about employment,
+                       </p>
+                       <li>Employment Permits : <a href="https://dbei.gov.ie/en/What-We-Do/Workplace-and-Skills/Employment-Permits/" target="_blank">Click here</a><br></li>
+                       <li>Critical Skills Employment Permits : <a href="https://dbei.gov.ie/en/What-We-Do/Workplace-and-Skills/Employment-Permits/Permit-Types/Critical-Skills-Employment-Permit/" target="_blank">Click here</a></li>
+                       <li>Salary Survey : <a href="https://www.brightwater.ie/salary-survey" target="_blank">Click here</a><br></li>
+                       <li>Jobs in Ireland : <a href="https://www.irishjobs.ie/" target="_blank">Click here</a></li>
 
                   </div>
 
 
                 </div>
 
+                <div style="margin-top: 20px;" class="row">
+
+
+                  <div class="col-sm-9">
+                       <b>Driving</b>
+                      <p>It is possible to exchange a driving licence issued by an EU member state or an EEA member state
+                        (Norway, Liechtenstein and Iceland) for an Irish driving licence. It is also possible to exchange
+                        a driving licence issued by certain recognised states for an Irish driving licence. If your driving
+                        licence is issued by a country that is not recognised for driving licence exchange, you cannot
+                        exchange your licence for an Irish licence. You will need to go through the full driver licensing
+                        procedure starting with the driver theory test. However, when you have your learner permit, you will
+                        only need to take 6 essential driver training (EDT) lessons instead of the usual 12 lessons. You can
+                        access the rules of the road on the Road Safety Authority’s website.
+                      </p>
+                      <p>Important facts,
+                      </p>
+                      <li>In Ireland, you drive on the left-hand side of the road.</li>
+                      <li>Yield to all vehicles coming from your right and always turn left on entering a roundabout.</li>
+                      <li>You must be at least 17 years old to drive in Ireland.</li>
+                      <li>Speed limits in Ireland are in kilometres.</li>
+                      <li>The speed limit is 50km/h in built-up areas, 80km/h on regional and local roads, 100km/h on national roads and 120km/h on motorways. Be sure to keep an eye out for speed signs and make sure you’re not over or you will receive an €80 fine and 3 penalty points.</li>
+                      <li>All vehicle occupants are required to wear seat belts at all times.</li>
+                      <li>For those riding on motorcycles, helmets must be worn at all times.</li>
+                      <li>Use of mobile/cell phones while driving is strictly prohibited.</li>
+                      <li>At all times, you are required to carry a valid driving licence; your car must display both proof of insurance and a motor tax disc and, if the car is over four years old, the National Car Test (NCT) disc must also be displayed.</li>
+                      <li>The minimum insurance you must have before you drive a car in Ireland is Third Party Only cover.</li>
+                      <li>If renting a car, it is recommended that you carry a copy of your vehicle rental agreement.</li>
+                      <li>In Ireland, the traffic light sequence is different to most other European countries. Red is the same and means stop, but straight after the red light comes the green ‘for go’ light. The amber light only comes before a red light to warn us to stop unless it is unsafe to do so.</li>
+                      <li>Road Safety Authority Ireland : <a href="https://www.rsa.ie/" target="_blank">Click here</a></li>
+                      <li>National Driver Licence Service : <a href="https://www.ndls.ie/holders-of-foreign-licences.html" target="_blank">Click here</a></li>
+                  </div>
+                  <div class="col-sm-3">
+                      <img src="assets/images/driving.jpg">
+
+                  </div>
+                </div>
+
+                <div style="margin-top: 20px;" class="row">
+
+                  <div class="col-sm-3">
+                      <img src="assets/images/accommodation.jpg">
+
+                  </div>
+                  <div class="col-sm-9">
+                       <b>Accommodation</b>
+                      <p>There are numerous choices when it comes to the kind of accommodation you can rent or buy, such as
+                        houses, apartments, or house shares. House shares (renting a private bedroom in a shared house), are a
+                        very common option in Ireland, especially for single people in larger cities where demand and rents are
+                        high. Rents and house prices vary widely by location and are higher in cities. Of course, while rent in
+                        Dublin is higher than other parts of the country, it also has the widest range of amenities and access
+                        to jobs, as well as an excellent transport system. In big areas the housing market is more competitive.
+                        Prepare for a first come, first served approach and be proactive in making enquiries and arranging viewings.
+                        Letting agents can also help you find the perfect home, and may also provide administrative, management
+                        and other services for the property, but there will be an added fee.
+                      </p>
+                      <p>The Residential Tenancies Board (RTB) maintaining a register of private residential tenancies and tenancies of approved housing bodies,
+                        providing a dispute resolution service for tenants and landlords and carrying out research into the private rented sector.
+                      </p>
+                      <p>You can find more information about accommodation,
+                      </p>
+                      <li>The Residential Tenancies Board (RTB) : <a href="https://www.rtb.ie/" target="_blank">Click here</a><br></li>
+                      <li>Search accommodation 1 : <a href="https://www.daft.ie/" target="_blank">Click here</a></li>
+                      <li>Search accommodation 2 : <a href="https://www.myhome.ie/" target="_blank">Click here</a><br></li>
+                  </div>
+
+
+                </div>
 
               </div>
 
-
-
-
-               <!--div class="col-sm-3">
-
-                <img style="wiidth:100%;" src="assets/images/1082059559.jpeg">
-              </div-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
  </div>
 
@@ -371,13 +423,6 @@
                <i class="fa fa-pinterest-p fico-s hidden-xs"></i>
                <i class="fa fa-google-plus fico-s hidden-xs"></i>
                <i class="fa fa-facebook fico-s hidden-xs"></i>
-
-
-
-
-
-
-
               </p>
 
 
@@ -387,42 +432,7 @@
 
   </footer>
 
-
-
-
-
-
-
-
     </div>
-
-
-
-
-    <div style="z-index: 999999; margin-top: 10%;" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-<div style="width:450px;" class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title" id="myModalLabel">Donate Now</h4>
-    </div>
-    <div style="padding: 20px;" class="modal-body">
-
-      <b>Indian Bank, Thiruvattar.</b><br>
-      <b>IFSC Code:IDIB000T155.</b><br>
-      <b>MICR Code:629019013.</b><br>
-      <b>Name:Kingsly T.</b><br>
-      <b>a/c No:6093117224.</b><br>
-    </div>
-
-  </div>
-</div>
-</div>
-
-
-
-
-
 </body>
 
 
